src/objects/Commercial_Alert_Visit_Relation__c.object
<CustomObject>
    <description>Object to related multiple commercial Altert with multilple visits</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>visit_id__r.dwp_kitv__visit_end_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>visit_id__r.dwp_kitv__visit_start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>commercial_id__c</fullName>
        <label>Commercial Alert</label>
        <referenceTo>altm__Commercial_Alert__c</referenceTo>
        <relationshipLabel>Relación de visitas</relationshipLabel>
        <relationshipName>Commercial_Alert_Task_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>visit_id__c</fullName>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Commercial Alert Task Relationship</relationshipLabel>
        <relationshipName>Commercial_Alert_Task_Relationship</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Relación de visita</label>
    <nameField>
        <displayFormat>CAT{YYYY}{MM}-{0}{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relación de visitas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>